--- a/package.json
+++ b/package.json
@@ -6,13 +6,66 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "1.9.1",
+    "axios": "^1.2.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "date-fns": "^2.29.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "expo": "~51.0.9",
+    "expo-application": "~5.1.1",
+    "expo-constants": "~14.2.1",
+    "expo-crypto": "~12.2.1",
+    "expo-device": "~5.2.1",
+    "expo-font": "~11.1.1",
+    "expo-localization": "~14.1.1",
+    "expo-random": "~13.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
+    "formik": "^2.2.9",
+    "i18n-js": "^4.2.0",
+    "i18next": "^22.4.5",
+    "jest": "^29.2.1",
+    "jest-expo": "^47.0.1",
+    "moment": "^2.30.1",
+    "prettier": "^2.8.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-i18next": "^12.1.1",
+    "react-native": "0.74.1",
+    "react-native-animatable": "^1.4.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pager-view": "6.1.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-switch-toggle": "^2.2.1",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-toast-message": "^2.1.5",
+    "react-navigation-stack": "react-navigation/stack",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.22",
+    "redux-saga": "^1.2.2",
+    "rn-swipeable-panel": "^1.2.7",
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
