--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,32 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "jsx": "react-native",
+    "target": "esnext",
+    "paths": {
+      "@navigation/*": ["src/navigation/*"],
+      "@theme/*": ["src/theme/*"],
+      "@theme": ["src/theme"],
+      "@components": ["src/components"],
+      "@components/*": ["src/components/*"],
+      "@store/*": ["src/store/*"],
+      "@store": ["src/store"],
+      "@screens/*": ["src/screens/*"],
+      "@screens": ["src/screens"],
+      "@assets/*": ["src/assets/*"],
+      "@assets": ["src/assets"],
+      "@config/*": ["src/config/*"],
+      "@config": ["src/config"],
+      "@util/*": ["src/util/*"],
+      "@util": ["src/util"],
+      "@constants/*": ["src/constants/*"],
+      "@constants": ["src/constants"],
+      "@api/*": ["src/api/*"],
+      "@api": ["src/api"],
+      "@hooks/*": ["src/hooks/*"],
+      "@hooks": ["src/hooks"]
+    }
   }
 }
